syntax = "proto3";

package compute;

option optimize_for = SPEED;
option java_package = "com.risingwave.proto";

message ShowConfigRequest {}

message ShowConfigResponse {
  string batch_config = 1;
  string stream_config = 2;
}

service ConfigService {
  rpc ShowConfig(ShowConfigRequest) returns (ShowConfigResponse);
}
